widget editor selector implemented

--- a/Frontend/src/app/sites/project-site/project-site.component.html
+++ b/Frontend/src/app/sites/project-site/project-site.component.html
@@ -23,3 +23,7 @@
 <p-dialog header="Select the type of the new widget" [(visible)]="weSelectorVisible" [modal]="true">
   <app-widget-editor-selector id="widget-editor-selector"></app-widget-editor-selector>
 </p-dialog>
+
+<p-dialog header="New widget" [(visible)]="newWeVisible" [modal]="true">
+  <app-widget-editor id="widget-editor" [widgetData]="newWidget"></app-widget-editor>
+</p-dialog>
