--- a/Frontend/src/app/sites/index/index.component.html
+++ b/Frontend/src/app/sites/index/index.component.html
@@ -52,7 +52,7 @@
 </div>
 
 <p-dialog header="Edit project" [(visible)]="showProjectEditModal" [modal]="true">
-  <app-pop-up-dialog id="popup" [projectData]="selectedProject" [closeCallback]="closeProjectEdit"></app-pop-up-dialog>
+  <app-pop-up-dialog id="popup" [projectData]="selectedProject" [closeCallback]="closeProjectEdit" [savedCallback]="projectSaved"></app-pop-up-dialog>
 </p-dialog>
 
 <p-dialog header="Edit user" [(visible)]="showUserEdit" [modal]="true">
