--- a/Frontend/src/app/elements/widget-editor/widget-editor.component.html
+++ b/Frontend/src/app/elements/widget-editor/widget-editor.component.html
@@ -1,3 +1,33 @@
-<p>
-  widget-editor works!
-</p>
+<div class="form-group">
+  <label for="title">
+    Title
+  </label>
+  <input id="title" type="text" size="30" pInputText [(ngModel)]="widget.title">
+</div>
+<div [ngSwitch]="widget.type">
+  <div *ngSwitchCase="'textWidget'">
+    <div class="form-group">
+      <label for="text">
+        Text
+      </label>
+      <textarea id="text" size="30" pInputTextarea [(ngModel)]="widget.data"></textarea>
+    </div>
+  </div>
+  <div *ngSwitchCase="'imageWidget'">
+    <div class="form-group">
+      <label for="image">
+        Image
+      </label>
+      <div>
+        <img id="image" class="fileuploaderImage" [src]="widget.data" onerror="this.src='../assets/images/projectHeaderImage.jpg';"><br>
+        <p-fileUpload #form auto="true" mode="basic" accept="image/*" maxFileSize="1000000" customUpload="true" (uploadHandler)="myUploader($event, form)"></p-fileUpload>
+      </div>
+    </div>
+  </div>
+  <div *ngSwitchCase="'chartWidget'">"Málna"</div>
+  <div *ngSwitchDefault>Error: Undefined widget type.</div>
+</div>
+<div class="form-group">
+  <button pButton type="button" label="Save" class="ui-button-success"></button>
+  <button pButton type="button" label="Cancel" class="ui-button-danger" (click)="closeEditor()"></button>
+</div>
