--- a/Frontend/src/app/elements/widget-editor/widget-editor.component.html
+++ b/Frontend/src/app/elements/widget-editor/widget-editor.component.html
@@ -1,3 +1,4 @@
+<p-toast [style]="{marginTop: '80px'}"></p-toast>
 <div class="form-group">
   <label for="title">
     Title
@@ -28,6 +29,6 @@
   <div *ngSwitchDefault>Error: Undefined widget type.</div>
 </div>
 <div class="form-group">
-  <button pButton type="button" label="Save" class="ui-button-success"></button>
+  <button pButton type="button" label="Save" class="ui-button-success" (click)="saveWidget()"></button>
   <button pButton type="button" label="Cancel" class="ui-button-danger" (click)="closeEditor()"></button>
 </div>
