delete widget implemented

--- a/Frontend/src/app/elements/widget-router/widget-router.component.html
+++ b/Frontend/src/app/elements/widget-router/widget-router.component.html
@@ -14,3 +14,10 @@
 <p-dialog header="Edit: {{selectedWidget.title}}" [(visible)]="weVisible" [modal]="true">
   <app-widget-editor id="widget-editor" [widgetData]="selectedWidget" [project]="project" [closeCallback]="closeWidgetEdit"></app-widget-editor>
 </p-dialog>
+
+<p-confirmDialog #cd [style]="{width: '50vw'}">
+  <p-footer>
+    <button class="ui-button-success" type="button" pButton icon="pi pi-check" label="Delete" (click)="cd.accept()"></button>
+    <button class="ui-button-danger" type="button" pButton icon="pi pi-times" label="Cancel" (click)="cd.reject()"></button>
+  </p-footer>
+</p-confirmDialog>
