--- a/Frontend/src/app/elements/user-handling/user-handling.component.html
+++ b/Frontend/src/app/elements/user-handling/user-handling.component.html
@@ -13,7 +13,9 @@
       {{user.username}}
   </ng-template>
 </p-dataView> -->
-
+<div>
+  
+</div>
 <div class="form-group">
   <button pButton type="button" (click)="saveUserSettings()" label="Save" class="ui-button-success"></button>
   <button pButton type="button" (click)="closeUserHandling()" label="Cancel" class="ui-button-danger"></button>
