--- a/Frontend/src/app/elements/widget-editor/widget-editor.component.html
+++ b/Frontend/src/app/elements/widget-editor/widget-editor.component.html
@@ -20,12 +20,14 @@
         Image
       </label>
       <div>
-        <img id="image" class="fileuploaderImage" [src]="widget.data" onerror="this.src='../assets/images/projectHeaderImage.jpg';"><br>
+        <img id="image" class="fileuploaderImage" [src]="widget.data"><br>
         <p-fileUpload #form auto="true" mode="basic" accept="image/*" maxFileSize="1000000" customUpload="true" (uploadHandler)="myUploader($event, form)"></p-fileUpload>
       </div>
     </div>
   </div>
-  <div *ngSwitchCase="'chartWidget'">"Málna"</div>
+  <div *ngSwitchCase="'chartWidget'">
+
+  </div>
   <div *ngSwitchDefault>Error: Undefined widget type.</div>
 </div>
 <div class="form-group">
