--- a/Frontend/src/app/elements/user-handling/user-handling.component.html
+++ b/Frontend/src/app/elements/user-handling/user-handling.component.html
@@ -1,22 +1,15 @@
-<!-- <div *ngFor="let item of TempUsers.users">
-  <p>{{item.id}}</p>
-  <p>{{item.username}}</p>
-</div> -->
-
-<!-- <p-dataView #dv [value]="TempUsers.users">
-  <ng-template let-user pTemplate="listItem">
-    <p>
-      {{user.id}}
-    </p>
-  </ng-template>
-  <ng-template let-user pTemplate="gridItem">
-      {{user.username}}
-  </ng-template>
-</p-dataView> -->
-<div>
-  
+<div class="ui-inputgroup">
+    <input style="flex-grow: 1;" type="text" [(ngModel)]="this.newValue" pInputText placeholder="Username or mail">
+    <button (click)="this.addNewUser()" pButton type="button" icon="pi pi-plus" class="ui-button-success"></button>
 </div>
+
+<div class="userlist">
+  <div class="user" *ngFor="let user of Users">
+    <div class="name">{{user.username}}</div>
+    <p-button (click)="this.userDelete(user.id)" icon="pi pi-times"></p-button>
+  </div>
+</div>
+
 <div class="form-group">
-  <button pButton type="button" (click)="saveUserSettings()" label="Save" class="ui-button-success"></button>
-  <button pButton type="button" (click)="closeUserHandling()" label="Cancel" class="ui-button-danger"></button>
+  <button pButton type="button" (click)="closeUserHandling()" label="Close"></button>
 </div>
