--- a/Frontend/src/app/elements/widget-editor-selector/widget-editor-selector.component.html
+++ b/Frontend/src/app/elements/widget-editor-selector/widget-editor-selector.component.html
@@ -2,5 +2,5 @@
   <label for="type">
     Widget type
   </label>
-  <p-selectButton [options]="widgetTypes" [(ngModel)]="selectedType" (click)="openWidgetEditor(selectedType)"></p-selectButton>
+  <p-selectButton id="type" [options]="widgetTypes" [(ngModel)]="selectedType" (click)="openWidgetEditor(selectedType)"></p-selectButton>
 </div>
