add and remove users on project

--- a/Frontend/src/app/elements/user-handling/user-handling.component.scss
+++ b/Frontend/src/app/elements/user-handling/user-handling.component.scss
@@ -6,6 +6,8 @@
     display: flex;
     min-width: 300px;
     justify-content: center;
+    align-items: center;
+    margin-top:5px;
 
     .name {
       flex-grow: 1;
