--- a/Frontend/src/app/sites/project-site/project-site.component.html
+++ b/Frontend/src/app/sites/project-site/project-site.component.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<p-dialog header="Edit user" [(visible)]="DisplayUserHandling" [modal]="true" (onAfterHide)="exitcallback()">
+<p-dialog header="Edit user" [(visible)]="DisplayUserHandling" [modal]="true">
     <app-user-handling #userHandling></app-user-handling>
 </p-dialog>
 
