footer minor changes

--- a/Frontend/src/app/sites/index/index.component.html
+++ b/Frontend/src/app/sites/index/index.component.html
@@ -45,7 +45,8 @@
         </div>
       </div>
       <div class="layout-footer">
-        Footer
+        <p>Copyright © 2019 Budapest, Hungary. All rights reserved.</p> 
+        <p><img class="github" src="https://image.flaticon.com/icons/svg/25/25231.svg" (click)="goToGitHubPage()"></p> 
       </div>
     </div>
   </div>
