github logo source modified

--- a/Frontend/src/app/sites/index/index.component.html
+++ b/Frontend/src/app/sites/index/index.component.html
@@ -46,7 +46,7 @@
       </div>
       <div class="layout-footer">
         <p>Copyright © 2019 Budapest, Hungary. All rights reserved.</p> 
-        <p><img class="github" src="https://image.flaticon.com/icons/svg/25/25231.svg" (click)="goToGitHubPage()"></p> 
+        <p><img class="github" src="../assets/images/25231.svg" (click)="goToGitHubPage()"></p> 
       </div>
     </div>
   </div>
