--- a/Frontend/src/app/elements/menubar/menubar.component.html
+++ b/Frontend/src/app/elements/menubar/menubar.component.html
@@ -1,4 +1,4 @@
-<p-toast [style]="{marginTop: '80px'}"></p-toast>
+<p-toast position="bottom-right" [style]="{marginTop: '80px'}"></p-toast>
 <p-menubar>
     <button id="btnOpenSidebar" pButton icon="fa fa-bars" style="margin-left:.25em"></button>
     <img class="menu-logo" src="../assets/images/mm_100.png" (click)="goToMainPage()">
