--- a/Frontend/src/app/elements/widget-editor/widget-editor.component.html
+++ b/Frontend/src/app/elements/widget-editor/widget-editor.component.html
@@ -11,7 +11,7 @@
       <label for="text">
         Text
       </label>
-      <textarea id="text" size="30" pInputTextarea [(ngModel)]="widget.data"></textarea>
+      <textarea id="text" style="width:500px; height:300px;" pInputTextarea [(ngModel)]="widget.data"></textarea>
     </div>
   </div>
   <div *ngSwitchCase="'imageWidget'">
