Footer to project site

--- a/Frontend/src/app/sites/project-site/project-site.component.html
+++ b/Frontend/src/app/sites/project-site/project-site.component.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="layout-footer">
-                Footer
+              <p>Copyright © 2019 Budapest, Hungary. All rights reserved.</p>
             </div>
         </div>
     </div>
